--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -6,7 +6,7 @@
 
 # load configuration
 # -----------------------------------------------------
-# configfile: "config/config.yml"
+configfile: "config/config.yml"
 
 
 # load rules
@@ -14,6 +14,7 @@
 include: "rules/mask_repeat.smk"
 include: "rules/map_rna.smk"
 include: "rules/trinity.smk"
+include: "rules/pasa.smk"
 
 
 # optional messages, log and error handling
@@ -34,5 +35,5 @@ onerror:
 # -----------------------------------------------------
 rule all:
     input:
-        "results/trinity/1GS-002/1GS-002.fa",
+        "results/pasa/1GS-002/1GS-002.gff3",
     default_target: True
