--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -9,6 +9,13 @@
 configfile: "config/config.yml"
 
 
+def container_image(image_name):
+    """
+    Helper function to change mirror prefixes for container images.
+    """
+    return "docker://" + config["container_mirror"] + "/" + image_name
+
+
 # load rules
 # -----------------------------------------------------
 include: "rules/mask_repeat.smk"
