--- a/.snakemake-workflow-catalog.yml
+++ b/.snakemake-workflow-catalog.yml
@@ -5,7 +5,7 @@ usage:
     desc: # describe your flags here in a few sentences
     flags: # put your flags here
   software-stack-deployment:
-    conda: true # whether pipeline works with '--sdm conda'
-    apptainer: true # whether pipeline works with '--sdm apptainer/singularity'
+    conda: false # whether pipeline works with '--sdm conda'
+    apptainer: false # whether pipeline works with '--sdm apptainer/singularity'
     apptainer+conda: true # whether pipeline works with '--sdm conda apptainer/singularity'
-    report: true # whether creation of reports using 'snakemake --report report.zip' is supported
+    report: false # whether creation of reports using 'snakemake --report report.zip' is supported
